# gSV

./: Cargo.toml  README.md  doc.md
example_data/: testGraph.gfa
scripts/: traversal_merge.py
src/: main.rs
src/bifurcation/: algo.rs  mod.rs
src/core/: core.rs  counting.rs  graph_helper.rs  helper.rs  mod.rs  writer.rs
src/panSV/: algo.rs  mod.rs  panSV_core.rs
tests/: cli.rs  main_test.rs
