[package]
name = "gSV"
version = "0.1.0"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gfaR = {path = "../gfaR"}
gfaR = "0.1.3"
bimap = "0.6.1"
#nested_intervals = {path = "/home/svorbrugg_local/Rust/nested_intervals"}
related_intervals = "0.1.0"
clap = "3.0.0-beta.4"
#gfaR_wrapper = {path = "/home/svorbrugg_local/Rust/gfaR_wrapper"}
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}
