[package]
name = "gSV"
version = "0.1.0"
authors = ["moinSebi <s.vorbrugg@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gfaR = {path = "../gfaR"}
#nested_intervals = {path = "/home/svorbrugg_local/Rust/nested_intervals"}
related_intervals = "0.1.0"
clap = "=3.0.0-beta.4"
gfaR_wrapper = {git = "https://github.com/MoinSebi/gfaR_wrapper"}

bifurcation = {git = "https://github.com/MoinSebi/bifurcation"}
